[package]
name = "libelf_parse"
edition = "2021"

[lib]
name = "elf_parse"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
strip = true
codegen-units = 1

[dependencies.object]
version = "0.36.5"
features = ["read_core", "elf", "unaligned"]
default-features = false
